my first commit

--- a/templates/about.html
+++ b/templates/about.html
@@ -10,6 +10,9 @@
 <h2>This program count words in Text</h2><br>
 <a href="{% url 'text' %}">Click here for start</a>
 
+<br>
+<br>
+<h3>Creation date: 24.09.2019</h3>
 
 </body>
 </html>
