I add to about.html my github profile link

--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,9 @@
 
 <br>
 <br>
-<h3>Creation date: 24.09.2019</h3>
+<h3>Creation date: 24.09.2019</h3><br>
+<a href="https://github.com/fuadsuleyman/">Our Github Profile</a>
+
 
 </body>
 </html>
